# msr

./: .gitignore  README.md  index.html  package.json  tailwind.config.js
.github/workflows/: publish.yaml
src/: App.tsx  fonts.css  index.css  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  data.rs  k0sctl.rs  main.rs  paths.rs
src-tauri/src/commands/: clusters.rs  hosts.rs  setup.rs  ssh.rs
src-tauri/src/data/: clusters.rs  errors.rs  hosts.rs  k0s.rs  setup.rs
src/commands/: clusters.ts  hosts.ts  index.ts
src/components/: sidebar.tsx  title-bar.tsx
src/components/contexts/: clusters.tsx  ui-controller.ts
src/components/drawers/: new-cluster-drawer.tsx  new-host-drawer.tsx  new-service-drawer.tsx  update-host-drawer.tsx
src/components/modals/: new-cluster-modal.tsx
src/components/routes/: clusters.tsx  index.tsx  main-layout.tsx
src/components/share/: base-button.tsx  button.tsx  drawer.tsx  form.tsx  input.tsx  modal.tsx  select.tsx
src/contexts/: clusters.tsx  hosts.tsx  tauri.tsx  ui-controller.ts  ui-controller.tsx
src/routes/: clusters-page.tsx  hosts-page.tsx  index.tsx  main-layout.tsx  services-page.tsx
src/utils/: service.ts  tauri.ts  zod.ts
