[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
tauri-plugin-shell = "2"
time = { version = "0.3", features = ["macros", "serde"] }
serde_with = { version = "3.11.0", features = ["time_0_3"] }
tauri-plugin-dialog = "2"
async-ssh2-tokio = "0.8.12"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 0
